deleted useless plotting files

--- a/script_plot/plots_paper.ipynb
+++ b/script_plot/plots_paper.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os, sys, math\n",
+    "sys.path.append(f'../library')\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import csv, glob, os, sys, math, functools\n",
-    "from astropy.timeseries import LombScargle\n",
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "from matplotlib.colors import LogNorm\n",
     "import data_management\n",
     "from scipy.fft import fft, fftfreq"
    ]
